--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore files
-resume.md
-Interview Knowledge.md
-LeetCode Design.md
-LeetCode Notes.md
-Screenshot/*.png
+job
+algorithm
+command.md
+Interesting Knwowledge.md
+Screenshot
